# eccentric-pe-aux

./: .gitignore  README.md  convert_posterior_EOB.py  convert_posterior_egw.py  eccentric_starting_frequency.py  pyproject.toml  savage_dickey_bf.py  test_backwards_evolution.ipynb
NR_injections/: NR_orbit_avg_frequency.ipynb  config_example.yaml  make_injection_NR.py
eccentric_pe_aux/: __init__.py  convert_posterior_EOB.py  convert_posterior_egw.py  eccentric_starting_frequency_v5ehm.py  savage_dickey_bf.py
eccentric_pe_aux/NR_injections/: NR_orb_avg_frequency.py  __init__.py  make_injection_NR.py
eccentric_pe_aux/bilby_aux/: __init__.py  capture_prior.md  capture_prior.py  ecc_cartesian.py  gwsignal_plugin.py  hyperbolic.py  plot_ecc_cartesian.ipynb  prior.prior
eccentric_pe_aux/bilby_aux/test/: capture.prior  capture_loguniform.prior  plot_capture_prior.ipynb  test_capture_prior.py  test_ecc_cartesian.py
eccentric_pe_aux/test/: test_egw_conversion.ipynb
